--- a/pinia-music/index.html
+++ b/pinia-music/index.html
@@ -8,7 +8,7 @@
   <title>VU3 - PINIA - MUSIC</title>
 </head>
 
-<body>
+<body class="bg-emerald-400 font-sans pb-24">
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
